--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 timezone: Asia/Shanghai
 encoding: utf-8
+markdown: kramdown
 permalink: /:categories/:year/:month/:day/:title
 paginate: 1
 paginate_path: "blog/page:num"
