--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,6 @@ timezone: Asia/Shanghai
 encoding: utf-8
 markdown: kramdown
 permalink: /:categories/:year/:month/:day/:title
-paginate: 1
-paginate_path: "blog/page:num"
 
 author: sapser
 author_mail: sapser@126.com
@@ -15,4 +13,4 @@ defaults:
       path: ""
       type: "post"
     values:
-      layout: "default"
+      layout: "post"
