--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
-baseurl: http://sapser.github.io
+#baseurl: http://sapser.github.io
 timezone: Asia/Shanghai
 encoding: utf-8
-markdown: kramdown
+#markdown: kramdown
+#markdown: redcarpet
+markdown: rdiscount
 highlighter: pygments
 permalink: /:categories/:year/:month/:day/:title
 
