modify markdown engine to kramdown

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ encoding: utf-8
 
 #mardown解释器
 #redcarpet支持```python这种语法
-markdown: redcarpet
+#markdown: redcarpet
+markdown: kramdown
 #支持markdown扩展名
 markdown_ext:  markdown,mkdown,mkdn,mkd,md
 
