注释_config.yml中markdown选项，使用github默认markdown引擎

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ encoding: utf-8
 #mardown解释器
 #redcarpet支持```python这种语法
 #markdown: redcarpet
-markdown: kramdown
+#markdown: kramdown
 #支持markdown扩展名
 markdown_ext:  markdown,mkdown,mkdn,mkd,md
 
